# serverForArticle

./: CMakeLists.txt  Dockerfile  database.db  main.cpp  server for mybase64.sln  server for mybase64.vcxproj  server for mybase64.vcxproj.filters
